--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mohamedachbani50@gmail.com
-spring.mail.password=kkkdqlxfaokigpwr
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
